// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReplayIcon with all props it renders correctly 1`] = `
<svg
  className="css-1hgjwxk"
  color="#fff"
  height="3em"
  viewBox="0 0 24 24"
  width="3em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"
  />
</svg>
`;

exports[`ReplayIcon without props it renders correctly 1`] = `
<svg
  className="css-189tqkb"
  color="#fff"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"
  />
</svg>
`;
